redirect to official docs

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-oam
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html>
+<head>
+<title>OpenAerialMap</title>
+<meta http-equiv="REFRESH" content="0;url=http://docs.oam.osgeo.org"></HEAD>
+</HTML>
